# eebit

./: .copier-answers.yml  .gitignore  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.rst  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  usage.rst
eebit/: __init__.py  bithandler.py  bitmask.py  helpers.py
tests/: conftest.py  test_bitmask.py  test_eebit.py  test_handler.py  test_helpers.py
tests/test_bitmask/: serialized_test_bitgroup_decode_to_columns.yml  serialized_test_bitgroup_get_mask_by_position.yml  test_bitgroup_decode_to_columns.yml  test_bitmask_decode_to_columns.yml
